# w

./: .gitattributes  .gitignore  Cargo.toml  README.md  types.lua
.github/workflows/: clippy.yml  coverage.yml
benches/: Cargo.toml  fn.w  lexer.rs  lib.rs
benches/log10/: bench.rs  log10.w
benches/math/: bench.rs  math.w
compiler/dec2flt/: Cargo.toml
compiler/dec2flt/src/: common.rs  decimal.rs  float.rs  lemire.rs  lib.rs  number.rs  parse.rs  slow.rs  table.rs
compiler/w/: Cargo.toml
compiler/w/src/: lib.rs  main.rs
compiler/w_ast/: Cargo.toml
compiler/w_ast/src/: ast_type.rs  codegen.rs  indir.rs  lib.rs  types.rs
compiler/w_codegen/: Cargo.toml
compiler/w_codegen/src/: lib.rs  nop.rs
compiler/w_compiler/: Cargo.toml
compiler/w_compiler/src/: handler.rs  lib.rs  locals.rs  primaryatom.rs  registry.rs  simpleatom.rs  spanned.rs  symbol_stack.rs  toplevel.rs
compiler/w_errors/: Cargo.toml
compiler/w_errors/src/: lib.rs
compiler/w_lexer/: Cargo.toml
compiler/w_parser/: Cargo.toml
compiler/w_session/: Cargo.toml
compiler/w_utils/: Cargo.toml
src/: lib.rs  source.rs  source_map.rs  span.rs
src/diag/: for_humans.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  codegen.rs  indir.rs  mod.rs  primaryatom.rs
tests/: fn.w  main.rs
tests/parser/: controlflow.fixture.w  controlflow.w  errors.fixture.w  errors.w  ifs.fixture.w  ifs.w  literals.fixture.w  literals.w  mod.rs  operations.fixture.w  operations.w  panic.fixture.w  panic.w  postfix.fixture.w  postfix.w  returns.fixture.w  returns.w  types.fixture.w  types.w
(+100 files in other folders)
