[package]
name = "w"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dev-dependencies]
#criterion = "0.3"

[[bench]]
name = "lexer"
harness = false

[dependencies]
unicode-segmentation = "1.8"
appendlist = "1.4"